boreal/tests/assets/invalid_files/compilation/invalid_identifier_binding2.yar
import "pe"

rule a {
    condition:
        for any k, v in pe.sections: (true)
}
